fixing GroupId in all places